[gd_scene load_steps=14 format=3 uid="uid://cmt58lwpqbpd1"]

[ext_resource type="Script" path="res://menus/level_select_item.gd" id="1_2yleq"]
[ext_resource type="FontFile" uid="uid://dvvkhv255pbtb" path="res://assets/fonts/Gputeks-Bold.ttf" id="3_ebssu"]
[ext_resource type="AudioStream" uid="uid://dfc4triv3slmt" path="res://assets/audio/interface-button-154180.mp3" id="3_p0qjs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tl71x"]
bg_color = Color(0.258824, 0.258824, 0.294118, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rycso"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p1d8n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4fax"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hsjbf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w4cih"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_o0o1w"]
polygon = PackedVector2Array(50, 62, 77, 62, 77, 164, 60, 164, 60, 76, 57, 72, 50, 72)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_hp8qw"]
polygon = PackedVector2Array(39, 69, 39, 63, 78, 63, 89, 66, 96, 71, 99, 76, 100, 81, 100, 93, 97, 99, 92, 104, 83, 107, 74, 108, 59, 108, 52, 111, 48, 117, 47, 123, 47, 158, 100, 158, 100, 164, 31, 164, 31, 118, 34, 111, 41, 106, 51, 102, 72, 102, 79, 100, 84, 93, 84, 80, 80, 73, 73, 69)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_bh4ep"]
polygon = PackedVector2Array(31, 63, 77, 63, 91, 69, 97, 78, 97, 96, 94, 105, 77, 111, 90, 114, 97, 120, 100, 127, 100, 149, 96, 157, 88, 162, 75, 164, 31, 164, 31, 158, 73, 158, 80, 154, 84, 146, 84, 124, 79, 117, 71, 114, 47, 114, 47, 108, 69, 108, 76, 105, 81, 97, 81, 78, 75, 71, 68, 69, 31, 69)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_hkd6p"]
polygon = PackedVector2Array(31, 63, 47, 63, 47, 120, 51, 127, 59, 131, 84, 131, 84, 63, 100, 63, 100, 164, 84, 164, 84, 137, 50, 137, 40, 133, 33, 126, 31, 119)

[node name="LevelSelectItem" type="PanelContainer"]
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_tl71x")
script = ExtResource("1_2yleq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.521569, 0.521569, 0.521569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_ebssu")
theme_override_font_sizes/font_size = 127
text = "4"
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.521569, 0.521569, 0.521569, 1)
theme_override_colors/font_pressed_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_colors/font_hover_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_focus_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_colors/font_hover_pressed_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = ExtResource("3_ebssu")
theme_override_font_sizes/font_size = 127
theme_override_styles/normal = SubResource("StyleBoxEmpty_rycso")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p1d8n")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j4fax")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hsjbf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w4cih")
text = "4"

[node name="1" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_o0o1w")

[node name="2" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_hp8qw")

[node name="3" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_bh4ep")

[node name="4" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_hkd6p")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_p0qjs")

[connection signal="mouse_entered" from="MarginContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
